--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         controls.enableZoom = true;
 
         // Свет
-        const ambientLight = new THREE.AmbientLight(0xffffff, );
+        const ambientLight = new THREE.AmbientLight(0xffffff, 20);
         scene.add(ambientLight);
 
         const directionalLight = new THREE.DirectionalLight(0xffffff, 5);
