--- a/index.html
+++ b/index.html
@@ -27,85 +27,52 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
-
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 5, 10);
-        
+        camera.position.set(0, 10, 0); // Камера сверху
+        camera.lookAt(0, 0, 0);
+
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         document.body.appendChild(renderer.domElement);
 
-        const controls = new THREE.OrbitControls(camera, renderer.domElement);
-        controls.enableDamping = true;
-        controls.dampingFactor = 0.1;
-        controls.rotateSpeed = 0.3;
-        controls.enableZoom = true;
-
-        // Улучшенное освещение
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1.5);
+        // Свет
+        const ambientLight = new THREE.AmbientLight(0xffffff, 2);
         scene.add(ambientLight);
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 2);
-        directionalLight.position.set(2, 5, 5);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 3);
+        directionalLight.position.set(5, 10, 5);
         scene.add(directionalLight);
 
-        const pointLight = new THREE.PointLight(0xffccaa, 3, 10);
-        pointLight.position.set(0, 3, 2);
-        scene.add(pointLight);
-
-        let mixers = [];
-        function scaleModel(model, scaleFactor) {
-            model.scale.set(scaleFactor, scaleFactor, scaleFactor);
-        }
-
         const loader = new THREE.GLTFLoader();
+
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
-            { x: -3, y: 0, z: 0, scale: 0.9, rotation: Math.PI / 10 },
-            { x: 0, y: 0, z: 0, scale: 1, rotation: 0 },
-            { x: 3, y: 0, z: 0, scale: 1, rotation: -Math.PI / 10 }
+            { x: -3, y: 0, z: 0, scale: 0.9 }, // Лево
+            { x: 0, y: 0, z: 0, scale: 1 },   // Центр
+            { x: 3, y: 0, z: 0, scale: 0.9 }  // Право
         ];
 
         models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
                 const model = glb.scene;
-                const mixer = new THREE.AnimationMixer(model);
-                console.log(`Модель загружена: ${modelFile}`);
-                model.traverse(function(child) {
-                    if (child.isMesh) {
-                        child.material.metalness = 0.5;
-                        child.material.roughness = 0.3;
-                    }
-                });
-                glb.animations.forEach((clip) => {
-                    let action = mixer.clipAction(clip);
-                    action.play();
-                    action.timeScale = 0.3;
-                });
                 model.position.set(positions[index].x, positions[index].y, positions[index].z);
-                model.rotation.y = positions[index].rotation;
-                scaleModel(model, positions[index].scale);
+                model.scale.set(positions[index].scale, positions[index].scale, positions[index].scale);
                 scene.add(model);
-                mixers.push(mixer);
             }, undefined, function(error) {
-                console.error(`Ошибка при загрузке ${modelFile}: `, error);
+                console.error(`Ошибка загрузки ${modelFile}:`, error);
             });
         });
 
         function animate() {
             requestAnimationFrame(animate);
-            mixers.forEach(mixer => mixer.update(0.016));
-            controls.update();
             renderer.render(scene, camera);
         }
-
         animate();
     </script>
 </body>
