--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
+
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 10, 0); // Камера сверху
+        camera.position.set(0, 5, 0);
         camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
@@ -41,38 +42,56 @@
         renderer.setPixelRatio(window.devicePixelRatio);
         document.body.appendChild(renderer.domElement);
 
-        // Свет
+        // Улучшенное освещение
         const ambientLight = new THREE.AmbientLight(0xffffff, 2);
         scene.add(ambientLight);
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 3);
-        directionalLight.position.set(5, 10, 5);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 4);
+        directionalLight.position.set(0, 5, 5);
+        directionalLight.castShadow = true;
         scene.add(directionalLight);
 
         const loader = new THREE.GLTFLoader();
+        const mixers = [];
 
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
-            { x: -3, y: 0, z: 0, scale: 0.9 }, // Лево
-            { x: 0, y: 0, z: 0, scale: 1 },   // Центр
-            { x: 3, y: 0, z: 0, scale: 0.9 }  // Право
+            { x: 0, y: 0, z: 0, scale: 1 },  // Центральная модель
+            { x: -3, y: 0, z: 0, scale: 1 }, // Левая
+            { x: 3, y: 0, z: 0, scale: 1 }   // Правая
         ];
 
         models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
                 const model = glb.scene;
+                const mixer = new THREE.AnimationMixer(model);
+                glb.animations.forEach(clip => {
+                    let action = mixer.clipAction(clip);
+                    action.play();
+                    action.timeScale = 0.3;
+                });
+
+                model.traverse(child => {
+                    if (child.isMesh) {
+                        child.material.metalness = 0.3;
+                        child.material.roughness = 0.2;
+                        child.material.needsUpdate = true;
+                    }
+                });
+
                 model.position.set(positions[index].x, positions[index].y, positions[index].z);
                 model.scale.set(positions[index].scale, positions[index].scale, positions[index].scale);
                 scene.add(model);
-            }, undefined, function(error) {
-                console.error(`Ошибка загрузки ${modelFile}:`, error);
+                mixers.push(mixer);
             });
         });
 
         function animate() {
             requestAnimationFrame(animate);
+            mixers.forEach(mixer => mixer.update(0.016));
             renderer.render(scene, camera);
         }
+
         animate();
     </script>
 </body>
