--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
@@ -34,59 +35,67 @@
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 5, 0);
+        camera.position.set(0, 8, 10);
         camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.outputEncoding = THREE.sRGBEncoding;
+        renderer.toneMapping = THREE.ACESFilmicToneMapping;
+        renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
 
-        // Улучшенное освещение
+        // Свет
         const ambientLight = new THREE.AmbientLight(0xffffff, 1);
         scene.add(ambientLight);
 
         const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-        directionalLight.position.set(0, 0, 0);
+        directionalLight.position.set(5, 10, 5);
         directionalLight.castShadow = true;
         scene.add(directionalLight);
-        
+
         const pointLight = new THREE.PointLight(0xddfcad, 3);
-        pointLight.position.set(0, 3, 0);
+        pointLight.position.set(0, 5, 0);
         scene.add(pointLight);
 
+        let mixers = [];
         const loader = new THREE.GLTFLoader();
-        const mixers = [];
 
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
-            { x: 0, y: 0, z: 0, scale: 0.4 },  // Центральная модель
-            { x: -3, y: 0, z: 0, scale: 1 }, // Левая
-            { x: 3, y: 0, z: 0, scale: 1 }   // Правая
+            { x: -3, y: 0, z: 0, scale: 0.9 },
+            { x: 0, y: 0, z: 0, scale: 1.2 },
+            { x: 3, y: 0, z: 0, scale: 0.9 }
         ];
 
         models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
                 const model = glb.scene;
                 const mixer = new THREE.AnimationMixer(model);
-                glb.animations.forEach(clip => {
-                    let action = mixer.clipAction(clip);
-                    action.play();
-                    action.timeScale = 0.3;
-                });
 
-                model.traverse(child => {
+                model.traverse(function(child) {
                     if (child.isMesh) {
                         child.material.metalness = 0.3;
-                        child.material.roughness = 0.2;
+                        child.material.roughness = 0.1;
+                        child.material.envMapIntensity = 1;
+                        child.material.side = THREE.DoubleSide;
                         child.material.needsUpdate = true;
                     }
+                });
+
+                glb.animations.forEach((clip) => {
+                    let action = mixer.clipAction(clip);
+                    action.play();
+                    action.timeScale = 0.5;
                 });
 
                 model.position.set(positions[index].x, positions[index].y, positions[index].z);
                 model.scale.set(positions[index].scale, positions[index].scale, positions[index].scale);
                 scene.add(model);
                 mixers.push(mixer);
+            }, undefined, function(error) {
+                console.error(`Ошибка при загрузке ${modelFile}: `, error);
             });
         });
 
