--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 8, 10);
+        camera.position.set(0, 8, 15);
         camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
@@ -47,15 +47,15 @@
         document.body.appendChild(renderer.domElement);
 
         // Свет
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Уменьшено освещение
         scene.add(ambientLight);
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 3); 
         directionalLight.position.set(5, 10, 5);
         directionalLight.castShadow = true;
         scene.add(directionalLight);
 
-        const pointLight = new THREE.PointLight(0xddfcad, 3);
+        const pointLight = new THREE.PointLight(0xddfcad, 5); // Понижена интенсивность точечного света
         pointLight.position.set(0, 5, 0);
         scene.add(pointLight);
 
@@ -64,9 +64,9 @@
 
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
-            { x: -3, y: 0, z: 0, scale: 0.9 },
-            { x: 0, y: 0, z: 0, scale: 1.2 },
-            { x: 3, y: 0, z: 0, scale: 0.9 }
+            { x: 0, y: 0, z: 0, scale: 1 },      // Главная модель в центре
+            { x: -4, y: 0, z: 0, scale: 0.6 },   // Модель слева
+            { x: 4, y: 0, z: 0, scale: 0.6 }     // Модель справа
         ];
 
         models.forEach((modelFile, index) => {
@@ -76,8 +76,8 @@
 
                 model.traverse(function(child) {
                     if (child.isMesh) {
-                        child.material.metalness = 0.3;
-                        child.material.roughness = 0.1;
+                        child.material.metalness = 1.3;  // Использованы более высокие значения
+                        child.material.roughness = 3;
                         child.material.envMapIntensity = 1;
                         child.material.side = THREE.DoubleSide;
                         child.material.needsUpdate = true;
@@ -107,5 +107,8 @@
 
         animate();
     </script>
+</body>
+</html>
+
 </body>
 </html>
