--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 8, 15);
+        camera.position.set(0, 10, 15); // Камера сверху
         camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
@@ -46,22 +46,20 @@
         renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
 
-        // Свет
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); // Уменьшено освещение
-        scene.add(ambientLight);
+        // Контейнеры для каждой модели с их собственным освещением
+        let containers = [];
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 3); 
-        directionalLight.position.set(5, 10, 5);
-        directionalLight.castShadow = true;
-        scene.add(directionalLight);
+        // Функция для создания освещения
+        function createLighting(color, intensity, position) {
+            const ambientLight = new THREE.AmbientLight(color, intensity); 
+            const directionalLight = new THREE.DirectionalLight(color, 3);
+            directionalLight.position.set(...position);
+            directionalLight.castShadow = true;
 
-        const pointLight = new THREE.PointLight(0xddfcad, 5); // Понижена интенсивность точечного света
-        pointLight.position.set(0, 5, 0);
-        scene.add(pointLight);
+            return { ambient: ambientLight, directional: directionalLight };
+        }
 
-        let mixers = [];
         const loader = new THREE.GLTFLoader();
-
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
             { x: 0, y: 0, z: 0, scale: 1 },      // Главная модель в центре
@@ -71,12 +69,20 @@
 
         models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
+                const container = new THREE.Group();
+                containers.push(container); // Добавляем контейнер в список
+
                 const model = glb.scene;
                 const mixer = new THREE.AnimationMixer(model);
 
+                // Освещение для каждого контейнера
+                const { ambient, directional } = createLighting(0xffffff, 0.5, [5, 10, 5]);
+                container.add(ambient);
+                container.add(directional);
+
                 model.traverse(function(child) {
                     if (child.isMesh) {
-                        child.material.metalness = 1.3;  // Использованы более высокие значения
+                        child.material.metalness = 1.3;
                         child.material.roughness = 3;
                         child.material.envMapIntensity = 1;
                         child.material.side = THREE.DoubleSide;
@@ -92,8 +98,9 @@
 
                 model.position.set(positions[index].x, positions[index].y, positions[index].z);
                 model.scale.set(positions[index].scale, positions[index].scale, positions[index].scale);
-                scene.add(model);
-                mixers.push(mixer);
+                container.add(model);
+
+                scene.add(container);
             }, undefined, function(error) {
                 console.error(`Ошибка при загрузке ${modelFile}: `, error);
             });
@@ -101,14 +108,13 @@
 
         function animate() {
             requestAnimationFrame(animate);
-            mixers.forEach(mixer => mixer.update(0.016));
+            containers.forEach(container => {
+                container.rotation.y += 0.01; // Для эффекта вращения
+            });
             renderer.render(scene, camera);
         }
 
         animate();
     </script>
-</body>
-</html>
-
 </body>
 </html>
