--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 10, 15); // Камера сверху
-        camera.lookAt(0, 0, 0);
+        camera.position.set(0, 10, 10); // Камера теперь сверху, немного отдалена
+        camera.lookAt(0, 0, 0); // Камера смотрит на центр сцены
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -108,9 +108,6 @@
 
         function animate() {
             requestAnimationFrame(animate);
-            containers.forEach(container => {
-                container.rotation.y += 0.01; // Для эффекта вращения
-            });
             renderer.render(scene, camera);
         }
 
