--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 10, 10); // Камера теперь сверху, немного отдалена
-        camera.lookAt(0, 0, 0); // Камера смотрит на центр сцены
+        camera.position.set(0, 10, 20); // Камера сверху, подальше, чтобы объекты не перекрывались
+        camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -46,44 +46,38 @@
         renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
 
-        // Контейнеры для каждой модели с их собственным освещением
-        let containers = [];
+        // Основное освещение
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.7); // немного увеличена интенсивность
+        scene.add(ambientLight);
 
-        // Функция для создания освещения
-        function createLighting(color, intensity, position) {
-            const ambientLight = new THREE.AmbientLight(color, intensity); 
-            const directionalLight = new THREE.DirectionalLight(color, 3);
-            directionalLight.position.set(...position);
-            directionalLight.castShadow = true;
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 3);
+        directionalLight.position.set(5, 10, 5);
+        directionalLight.castShadow = true;
+        scene.add(directionalLight);
 
-            return { ambient: ambientLight, directional: directionalLight };
-        }
+        const pointLight = new THREE.PointLight(0xffc107, 8); // Яркий желтый точечный свет
+        pointLight.position.set(0, 5, 0);
+        scene.add(pointLight);
 
+        let mixers = [];
         const loader = new THREE.GLTFLoader();
+
         const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
         const positions = [
-            { x: 0, y: 0, z: 0, scale: 1 },      // Главная модель в центре
-            { x: -4, y: 0, z: 0, scale: 0.6 },   // Модель слева
-            { x: 4, y: 0, z: 0, scale: 0.6 }     // Модель справа
+            { x: -3, y: 0, z: 0, scale: 0.9 },
+            { x: 0, y: 0, z: 0, scale: 1.2 },
+            { x: 3, y: 0, z: 0, scale: 0.9 }
         ];
 
         models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
-                const container = new THREE.Group();
-                containers.push(container); // Добавляем контейнер в список
-
                 const model = glb.scene;
                 const mixer = new THREE.AnimationMixer(model);
 
-                // Освещение для каждого контейнера
-                const { ambient, directional } = createLighting(0xffffff, 0.5, [5, 10, 5]);
-                container.add(ambient);
-                container.add(directional);
-
                 model.traverse(function(child) {
                     if (child.isMesh) {
-                        child.material.metalness = 1.3;
-                        child.material.roughness = 3;
+                        child.material.metalness = 1.3; // Metalness для ярких бликов
+                        child.material.roughness = 3; // Меньше шероховатости для гладкой поверхности
                         child.material.envMapIntensity = 1;
                         child.material.side = THREE.DoubleSide;
                         child.material.needsUpdate = true;
@@ -98,9 +92,8 @@
 
                 model.position.set(positions[index].x, positions[index].y, positions[index].z);
                 model.scale.set(positions[index].scale, positions[index].scale, positions[index].scale);
-                container.add(model);
-
-                scene.add(container);
+                scene.add(model);
+                mixers.push(mixer);
             }, undefined, function(error) {
                 console.error(`Ошибка при загрузке ${modelFile}: `, error);
             });
@@ -108,6 +101,7 @@
 
         function animate() {
             requestAnimationFrame(animate);
+            mixers.forEach(mixer => mixer.update(0.016));
             renderer.render(scene, camera);
         }
 
