--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: url('./images/hauhi.jpg') no-repeat center center fixed;
+            background: url('./hauhi.jpg') no-repeat center center fixed;
             background-size: cover;
-            filter: contrast(1.3) brightness(1.1);
+            filter: contrast(1.2);
+            image-rendering: crisp-edges;
         }
         canvas {
             display: block;
@@ -49,15 +50,15 @@
         controls.rotateSpeed = 0.5;
         controls.enableZoom = true;
 
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1.2);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1.5);
         scene.add(ambientLight);
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 1.5);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 2);
         directionalLight.position.set(5, 10, 7.5);
         scene.add(directionalLight);
 
-        const pointLight = new THREE.PointLight(0xffccaa, 2, 50);
-        pointLight.position.set(-7, 3, 5); // Свет расположен сбоку для создания бликов
+        const pointLight = new THREE.PointLight(0xffccaa, 1.5, 50);
+        pointLight.position.set(-5, 3, 3);
         pointLight.castShadow = true;
         scene.add(pointLight);
 
