--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
         controls.rotateSpeed = 0.5;
         controls.enableZoom = true;
 
+        const renderer = new THREE.WebGLRenderer({ 
+    alpha: true, 
+    antialias: true, 
+    precision: 'highp' 
+});
+renderer.setPixelRatio(window.devicePixelRatio);
+
+        renderer.shadowMap.enabled = true;
+renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+
+pointLight.castShadow = true;
+directionalLight.castShadow = true;
+
         const ambientLight = new THREE.AmbientLight(0xffffff, 1.5);
         scene.add(ambientLight);
 
