--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js GLB Model with Animations</title>
+    <title>Three.js GLB Model</title>
     <style>
         body {
             margin: 0;
@@ -31,71 +31,108 @@
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
-
+    
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 3, 10);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        camera.position.set(0, 5, 0);
+        camera.lookAt(0, 0, 0);
+
+        const renderer = new THREE.WebGLRenderer({
+            alpha: true,
+            antialias: true,
+            powerPreference: "high-performance",
+        });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
-        controls.dampingFactor = 0.1;
-        controls.rotateSpeed = 0.3;
+        controls.dampingFactor = 0;
+        controls.rotateSpeed = 0.5;
         controls.enableZoom = false;
 
         const ambientLight = new THREE.AmbientLight(0xffffff, 2);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xffddaa, 1);
-        pointLight.position.set(5, 5, 5);
+        const pointLight = new THREE.PointLight(0xddfcad, 10);
+        pointLight.position.set(2, 0, 2);
         scene.add(pointLight);
 
-        const loader = new THREE.GLTFLoader();
+        let mixer1, mixer2, mixer3;
+        let model1, model2, model3;
 
-        let mixers = [];
+        function scaleModel(model, scaleFactor) {
+            model.scale.set(scaleFactor, scaleFactor, scaleFactor);
+        }
+
+        const loader = new THREE.GLTFLoader();
 
         function applyMaterialEnhancements(model) {
             model.traverse((child) => {
                 if (child.isMesh) {
                     child.material = new THREE.MeshStandardMaterial({
                         color: 0xffffff,
-                        roughness: 0.6,
-                        metalness: 0.1,
-                        emissive: 0x222222,
+                        roughness: 0.3,  // Матовая поверхность
+                        metalness: 0.05, 
+                        emissive: 0x222222
                     });
                 }
             });
         }
 
-        function loadModel(url, position, scaleFactor) {
-            loader.load(url, function (glb) {
-                const model = glb.scene;
-                const mixer = new THREE.AnimationMixer(model);
-                glb.animations.forEach((clip) => {
-                    const action = mixer.clipAction(clip);
-                    action.play();
-                    action.timeScale = 0.3;
-                });
-                mixers.push(mixer);
-                model.position.copy(position);
-                model.scale.set(scaleFactor, scaleFactor, scaleFactor);
-                applyMaterialEnhancements(model);
-                scene.add(model);
+        loader.load('./models/untitled.glb', function(glb) {
+            model1 = glb.scene;
+            mixer1 = new THREE.AnimationMixer(model1);
+            glb.animations.forEach((clip) => {
+                let action = mixer1.clipAction(clip);
+                action.play();
+                action.timeScale = 0.3;
             });
-        }
+            applyMaterialEnhancements(model1);
+            model1.position.set(0.2, 0, 0);
+            scaleModel(model1, 2.3);
+            scene.add(model1);
+        });
 
-        loadModel('./models/untitled.glb', new THREE.Vector3(0.2, 0, 0), 1.5);
-        loadModel('./models/untitled2.glb', new THREE.Vector3(-3, 0, 0), 1);
-        loadModel('./models/untitled3.glb', new THREE.Vector3(3, 0, 0), 1);
+        loader.load('./models/untitled2.glb', function(glb) {
+            model2 = glb.scene;
+            mixer2 = new THREE.AnimationMixer(model2);
+            glb.animations.forEach((clip) => {
+                let action = mixer2.clipAction(clip);
+                action.timeScale = 0.3;
+                const duration = clip.duration;
+                const startTime = 0.25 * duration;
+                action.reset();
+                action.time = startTime;
+                action.play();
+            });
+            applyMaterialEnhancements(model2);
+            model2.position.set(-3, 0, 0);
+            scaleModel(model2, 1);
+            scene.add(model2);
+        });
+
+        loader.load('./models/untitled3.glb', function(glb) {
+            model3 = glb.scene;
+            mixer3 = new THREE.AnimationMixer(model3);
+            glb.animations.forEach((clip) => {
+                let action = mixer3.clipAction(clip);
+                action.play();
+                action.timeScale = 0.3;
+            });
+            applyMaterialEnhancements(model3);
+            model3.position.set(3, 0, 0);
+            scaleModel(model3, 1);
+            scene.add(model3);
+        });
 
         function animate() {
             requestAnimationFrame(animate);
-            const delta = 0.016;
-            mixers.forEach((mixer) => mixer.update(delta));
+            if (mixer1) mixer1.update(0.016);
+            if (mixer2) mixer2.update(0.016);
+            if (mixer3) mixer3.update(0.016);
             controls.update();
             renderer.render(scene, camera);
         }
