--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         const ambientLight = new THREE.AmbientLight(0xffffff, 1.9);
         scene.add(ambientLight);
         
-        const pointLight = new THREE.PointLight(#ff9245, 15);
+        const pointLight = new THREE.PointLight(0xffffff, 15);
         pointLight.position.set(-2.5, 0, );
         scene.add(pointLight);
         
