--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.9);
         scene.add(ambientLight);
         
-        const pointLight = new THREE.PointLight(0xffffff, 3, 100);
-        pointLight.position.set(5, 10, 5);
+        const pointLight = new THREE.PointLight(0xffffff, 2);
+        pointLight.position.set(-3, 5, 1);
         scene.add(pointLight);
         
         let mixer1, mixer2, mixer3;
