--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         let mixer;
         const loader = new THREE.GLTFLoader();
 
-        loader.load('/untitled.glb', function (glb) {
+        loader.load('/untitled2.glb', function (glb) {
             const model = glb.scene;
             mixer = new THREE.AnimationMixer(model);
             glb.animations.forEach((clip) => {
@@ -64,7 +64,7 @@
                 action.play();
             });
             model.position.set(0, 0, 0);
-            model.scale.set(1, 1, 1);
+            model.scale.set(1.2, 1.2, 1.2);
             scene.add(model);
         });
 
