--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 action.play();
             });
             model.position.set(0, 0, 0);
-            model.scale.set(1.2, 1.2, 1.2);
+            model.scale.setScalar(1.2);
             scene.add(model);
         });
 
