--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <!-- Переносим TWEEN.js в конец body -->
-    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
+
+    <!-- Добавим TWEEN.js с атрибутом defer -->
+    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js" defer></script>
 
     <script>
         // Создаем сцену, камеру и рендерер
@@ -121,4 +122,3 @@
     </script>
 </body>
 </html>
-
